[package]
name = "bq34z100_rust"
description = "Provides an embedded_hal driver for the fuel gauge series bq34z100"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-No-Military-License"
repository = "https://github.com/empirephoenix/bq34z100_rust"
keywords = ["fuel", "gauge", "lithium", "battery", "embedded-hal-driver"]
categories = ["embedded", "hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
embedded-hal = "1.0.0"